--- a/public/index.html
+++ b/public/index.html
@@ -5,47 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>IPSA Presidential Election</title>
 
-  <!-- Your site styles -->
   <link rel="stylesheet" href="/style.css"/>
 
-  <!-- QR library -->
-  <script src="https://unpkg.com/html5-qrcode@2.3.10/html5-qrcode.min.js"></script>
+  <!-- We will load html5-qrcode dynamically inside the script (with fallbacks) -->
 
-  <!-- Minimal extras just for this page -->
   <style>
-    /* Header logos */
-    .logos {
-      display: flex; align-items: center; justify-content: center;
-      gap: 16px; margin-bottom: 10px;
+    /* Floating white logo tab */
+    .logo-card{
+      display:inline-flex; align-items:center; gap:14px;
+      padding:10px 16px; border-radius:14px; background:#fff;
+      box-shadow:0 6px 20px rgba(0,0,0,.18);
+      margin:-6px auto 14px; max-width:92%;
     }
-    .logos img {
-      height: 42px; width: auto; object-fit: contain;
-      filter: drop-shadow(0 1px 2px rgba(0,0,0,.2));
-    }
-    /* QR reader box: must have a real height! */
-    #reader { width: 100%; max-width: 480px; height: 280px; margin: 0 auto; }
-    /* Small helper classes if your style.css doesn't have them */
-    .small { font-size: 0.9rem; opacity: .85 }
-    .bad { color: #ff6b6b }
-    .link { color: #7c9cff; text-decoration: underline; }
+    .logos{ display:flex; justify-content:center }
+    .logos img{ height:42px; width:auto; object-fit:contain }
+
+    /* The QR container MUST have a real height */
+    #reader{ width:100%; max-width:480px; height:280px; margin:0 auto; }
+
+    .small{ font-size:.9rem; opacity:.85 }
+    .bad{ color:#ff6b6b }
+    .link{ color:#7c9cff; text-decoration:underline }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="card">
-
-      <!-- Logos row -->
+      <!-- floating white tab with logos -->
       <div class="logos">
-        <!-- Replace paths or use external URLs if you prefer -->
-        <img src="/ipsa-logo.png" alt="IPSA logo" onerror="this.style.display='none'"/>
-        <img src="/school-logo.png" alt="School logo" onerror="this.style.display='none'"/>
+        <div class="logo-card">
+          <img src="/ipsa-logo.png" alt="IPSA" onerror="this.style.display='none'">
+          <img src="/school-logo.png" alt="School" onerror="this.style.display='none'">
+        </div>
       </div>
 
       <h1>IPSA Presidential Election</h1>
       <div class="small">school vote app made by hisyam - 4ever - ©2025</div>
       <div class="hr"></div>
-
-      <!-- In-app browser warning is injected below if needed -->
 
       <!-- Gate -->
       <div id="gate">
@@ -57,29 +53,29 @@
         </div>
 
         <div id="scan" style="margin-top:12px">
-          <div class="row" style="gap:8px;margin-bottom:8px;flex-wrap:wrap">
+          <!-- reader box first -->
+          <div id="reader"></div>
+          <div class="small" id="scanMsg" style="margin-top:6px;text-align:center"></div>
+
+          <!-- controls BELOW the reader -->
+          <div class="row" style="gap:8px;margin-top:8px;flex-wrap:wrap;justify-content:center">
             <select id="cameraSel" style="display:none"></select>
             <button id="startBtn" style="display:none" onclick="startScan()">Start camera</button>
             <button id="stopBtn" style="display:none;background:#374151" onclick="stopScan()">Stop</button>
           </div>
-
-          <!-- The reader MUST have a fixed height -->
-          <div id="reader"></div>
-          <div class="small" id="scanMsg" style="margin-top:6px"></div>
         </div>
 
         <div id="err" class="bad small" style="margin-top:8px"></div>
 
-        <!-- Optional quick help -->
         <details style="margin-top:10px">
           <summary class="small">Camera help</summary>
           <div class="small" style="margin-top:6px">
-            If camera doesn’t start:
+            If the camera doesn’t start:
             <ul style="margin:6px 0 0 16px">
-              <li>Open this page in Safari/Chrome (not an in-app browser).</li>
-              <li>Grant camera permission for this site.</li>
+              <li>Open in Safari/Chrome (not an in-app browser).</li>
+              <li>Allow camera permission for this site.</li>
               <li>Tap <b>Start camera</b> if auto-start is blocked.</li>
-              <li>Try switching camera using the selector.</li>
+              <li>Try switching camera in the selector.</li>
             </ul>
           </div>
         </details>
@@ -104,7 +100,7 @@
     </div>
   </div>
 
-  <!-- In-app browser notice (camera often blocked there) -->
+  <!-- In-app browser warning -->
   <script>
     (function () {
       const ua = navigator.userAgent || '';
@@ -127,7 +123,22 @@
 
   <!-- Main page logic -->
   <script>
-    /* --------- State --------- */
+    /* ---------- Robust loader for html5-qrcode (tries 3 CDNs) ---------- */
+    function loadScript(src){return new Promise((res,rej)=>{const s=document.createElement('script');s.src=src;s.async=true;s.onload=res;s.onerror=rej;document.head.appendChild(s);});}
+    async function ensureQrLib(){
+      if (window.Html5Qrcode) return true;
+      const urls = [
+        'https://unpkg.com/html5-qrcode@2.3.10/html5-qrcode.min.js',
+        'https://cdn.jsdelivr.net/npm/html5-qrcode@2.3.10/html5-qrcode.min.js',
+        'https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.10/html5-qrcode.min.js'
+      ];
+      for (const u of urls){
+        try { await loadScript(u); if (window.Html5Qrcode) return true; } catch {}
+      }
+      return !!window.Html5Qrcode;
+    }
+
+    /* ---------- State ---------- */
     let tokenValue = '';
     let ballotRule = '';
     let maleCandidates = [], femaleCandidates = [];
@@ -135,46 +146,46 @@
     let cameras = [];
     let currentCamId = null;
 
-    /* --------- Utils --------- */
+    /* ---------- Utils ---------- */
     const byId = (id) => document.getElementById(id);
     const show = (el, on) => { if (el) el.style.display = on ? '' : 'none'; };
     const showErr = (m) => { byId('err').innerText = m || ''; };
     const showVoteErr = (m) => { byId('voteErr').innerText = m || ''; };
     const scanMsg = (m) => { byId('scanMsg').innerText = m || ''; };
 
-    /* --------- Camera flow --------- */
+    /* ---------- Camera flow ---------- */
     async function initScanUI(){
-      // Reset UI elements
       show(byId('startBtn'), false);
       show(byId('stopBtn'), false);
       show(byId('cameraSel'), false);
-      // Make sure reader has a real height (prevents start errors)
-      byId('reader').style.height = '280px';
+      byId('reader').style.height = '280px'; // guarantee non-zero height
 
       if (!window.isSecureContext) {
         scanMsg('Open this page over HTTPS to use the camera. You can still type the token.');
         return;
       }
 
-      scanMsg('Preparing camera…');
-      try {
-        if (!window.Html5Qrcode) throw new Error('QR library not loaded');
+      scanMsg('Loading camera…');
+      const okLib = await ensureQrLib();
+      if (!okLib){
+        scanMsg('QR library failed to load. Check network/firewall, then reload.');
+        show(byId('startBtn'), true);
+        return;
+      }
 
+      try {
         cameras = await Html5Qrcode.getCameras();
-        if (!cameras || !cameras.length) {
+        if (!cameras || !cameras.length){
           scanMsg('No camera found. You can type the token instead.');
           return;
         }
-
-        // Prefer a back camera
         const rear = cameras.find(c => /back|rear|environment/i.test(c.label));
         currentCamId = (rear || cameras[0]).id;
 
-        // Camera selector if multiple
         const sel = byId('cameraSel');
         sel.innerHTML = '';
-        if (cameras.length > 1) {
-          for (const c of cameras) {
+        if (cameras.length > 1){
+          for (const c of cameras){
             const opt = document.createElement('option');
             opt.value = c.id;
             opt.textContent = c.label || 'Camera';
@@ -185,30 +196,27 @@
           show(sel, true);
         }
 
-        // Try auto-start (some browsers require a tap)
-        const ok = await tryStart(currentCamId, true);
-        if (!ok) {
+        const started = await tryStart(currentCamId, true);
+        if (!started){
           show(byId('startBtn'), true);
           scanMsg('Tap “Start camera” to begin scanning.');
         }
-      } catch (e) {
+      } catch (e){
         console.log(e);
-        scanMsg('Unable to access camera. Open in Safari/Chrome (not an in-app browser), ensure HTTPS, and allow camera permission. You can still type the token.');
+        scanMsg('Unable to access camera. Use Safari/Chrome (not an in-app browser), allow permissions, or type your token.');
         show(byId('startBtn'), true);
       }
     }
 
     async function tryStart(camId, silent=false){
       const r = byId('reader');
-      // Ensure non-zero size
       if (!r.style.height || (r.clientHeight || 0) < 120) r.style.height = '280px';
       const w = r.clientWidth || 320;
       const h = r.clientHeight || 280;
 
       try {
-        // Stop any previous instance first
         if (qrObj) { try { await qrObj.stop(); } catch {} }
-        qrObj = new Html5Qrcode('reader', { verbose: false });
+        qrObj = new Html5Qrcode('reader', { verbose:false });
 
         const box = Math.min(320, Math.floor(Math.min(w, h) * 0.9));
         const camConfig = { deviceId: { exact: camId } };
@@ -218,18 +226,17 @@
           {
             fps: 10,
             qrbox: { width: box, height: box },
-            aspectRatio: 1.7778,  // helps some Androids
+            aspectRatio: 1.7778,
             experimentalFeatures: { useBarCodeDetectorIfSupported: true },
             rememberLastUsedCamera: true
           },
           onScan,
-          () => {} // ignore per-frame failures
+          () => {}
         );
-
         show(byId('stopBtn'), true);
         scanMsg('Camera active. Point at the QR token.');
         return true;
-      } catch (e) {
+      } catch (e){
         console.log('start error', e);
         const msg = (e && (e.message || e.name)) ? `Could not start camera: ${e.message || e.name}` : 'Could not start camera.';
         if (!silent) scanMsg(msg + ' Tap “Start camera” or try another browser.');
@@ -261,15 +268,14 @@
       continueToken();
     }
 
-    /* --------- Gate & ballot --------- */
+    /* ---------- Gate & ballot ---------- */
     async function continueToken(){
       tokenValue = byId('token').value.trim();
       if (!tokenValue) return showErr('Enter a token');
       showErr('');
       try{
         const r = await fetch('/api/public/validate_token', {
-          method:'POST',
-          headers:{'content-type':'application/json'},
+          method:'POST', headers:{'content-type':'application/json'},
           body: JSON.stringify({ token: tokenValue })
         });
         const j = await r.json();
@@ -279,10 +285,7 @@
         maleCandidates = j.maleCandidates || [];
         femaleCandidates = j.femaleCandidates || [];
         renderBallot(j.role);
-      }catch(e){
-        console.log(e);
-        showErr('Server error');
-      }
+      }catch(e){ console.log(e); showErr('Server error'); }
     }
 
     function renderBallot(role){
@@ -315,7 +318,7 @@
       byId('gate').style.display='block';
       byId('token').value='';
       tokenValue=''; ballotRule='';
-      initScanUI(); // prepare camera again
+      initScanUI();
     }
 
     async function submitVote(){
@@ -328,8 +331,7 @@
 
       try{
         const r = await fetch('/api/public/submit_vote', {
-          method:'POST',
-          headers:{'content-type':'application/json'},
+          method:'POST', headers:{'content-type':'application/json'},
           body: JSON.stringify({ token: tokenValue, male, female })
         });
         const j = await r.json();
@@ -339,14 +341,12 @@
         byId('thanks').style.display='block';
         setTimeout(()=>{ resetGate(); }, 5000);
       }catch(e){
-        console.log(e);
-        showVoteErr('Server error');
+        console.log(e); showVoteErr('Server error');
       }
     }
 
-    /* --------- Boot --------- */
+    /* ---------- Boot & cleanup ---------- */
     window.addEventListener('load', initScanUI);
-    // Clean up if the user leaves
     window.addEventListener('beforeunload', () => { try { if (qrObj) qrObj.stop(); } catch {} });
   </script>
 </body>
